# Gym_management_system

./: README.md
Esp32_code/: CMakeLists.txt  HARDWARE_SETUP.md  README.md  attendance.json
Esp32_code/main/: CMakeLists.txt  main.c  rfid_manager.c  rfid_manager.h  storage_manager.c  storage_manager.h  user_manager.c  user_manager.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
Esp32_code/src/: main.py
Esp32_code/templates/: admin_login.html  base.html  index.html
Gym_server/: README.md  admin.json  requirements.txt
Gym_server/templates/: admin_dashboard.html
SUMMARY/: d.md  s.md
